# cli-rs

./: Cargo.toml  README.md
src/: arg.rs  cli_error.rs  command.rs  flag.rs  input.rs  lib.rs  main.rs  parser.rs  subcommand.rs
src/command/: command0.rs  command1.rs  command2.rs  command3.rs  command4.rs  mod.rs
src/command/cli-rs-command-gen/: Cargo.toml
src/command/cli-rs-command-gen/src/: lib.rs
tests/: parser_tests.rs
